# deepin-image-viewer

./: CMakeLists.txt
src/: deepin-image-viewer.desktop
src/qml/ImageDelegate/: DynamicImageDelegate.qml  SourceSizeOptimizer.qml
src/translations/: deepin-image-viewer_it.ts
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: addr_pri.h  stub.h  ut_commandparser.cpp  ut_commandparser.h  ut_configsetter.cpp  ut_configsetter.h  ut_cursortool.cpp  ut_cursortool.h  ut_filecontrol.cpp  ut_filecontrol.h  ut_globalcontrol.cpp  ut_globalcontrol.h  ut_globalstatus.cpp  ut_globalstatus.h  ut_imageinfo.cpp  ut_imageinfo.h  ut_main.cpp  ut_types.cpp  ut_types.h
